--- a/index.html
+++ b/index.html
@@ -341,6 +341,12 @@
             .movement-controls {
                 max-width: 250px;
             }
+
+            .status-bar {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 10px;
+            }
         }
     </style>
 </head>
