--- a/index.html
+++ b/index.html
@@ -347,6 +347,10 @@
                 align-items: flex-start;
                 gap: 10px;
             }
+
+            .results-panel {
+                padding: 15px 10px;
+            }
         }
     </style>
 </head>
@@ -468,7 +472,7 @@
         <!-- Panel de Resultados -->
         <div class="panel">
             <div class="results-header">
-                <h2>📋 Resultados</h2>
+                <h3>📋 Resultados</h3>
                 <button class="btn small danger clear-btn" onclick="clearResults()">
                     🗑️ Limpiar
                 </button>
