--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@
             }
 
             .results-panel {
+                text-align: left;
                 padding: 15px 10px;
             }
         }
