--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             <div class="results-panel" id="resultsPanel">
                 <div class="log-entry info">
                     <div class="timestamp">Sistema iniciado</div>
-                    Cliente XML-RPC listo para conectar al robot en 127.0.0.1:8080/RPC2
+                    <span>Cliente XML-RPC listo para conectar al robot en 127.0.0.1:8080/RPC2</span>
                 </div>
             </div>
         </div>
