--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
         .clear-btn {
             padding: 6px 12px;
             font-size: 12px;
+            margin-left: 10px;
         }
         
         .log-entry {
