--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
             justify-content: between;
             align-items: center;
             margin-bottom: 15px;
+            margin-right: 15px;
         }
         
         .results-header h3 {
@@ -285,7 +286,6 @@
         .clear-btn {
             padding: 6px 12px;
             font-size: 12px;
-            margin-left: 10px;
         }
         
         .log-entry {
