--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             justify-content: between;
             align-items: center;
             margin-bottom: 15px;
-            margin-right: 10px;
+            margin-right: 15px;
         }
         
         .results-header h3 {
@@ -286,6 +286,7 @@
         .clear-btn {
             padding: 6px 12px;
             font-size: 12px;
+            margin-bottom: 15px;
         }
         
         .log-entry {
